@@ -5,6 +5,7 @@ New Features
 ------------
 
 - Add MSVS 2015 and 2017 toolsets support.
+- Allow specifying configurations/platforms for external projects.
 
 Bug fixes
 ---------
